Corrigi os nomes das tabelas em DAO e atualizei o o sistema de conversão de produto controller